--- a/i3/config
+++ b/i3/config
@@ -2,7 +2,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font Fixed
+font pango:monospace Bold 8
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -237,8 +237,8 @@ bindsym $mod+Shift+period exec dunstctl context
 
 # Program keybindings
 mode "launch" {
-	bindsym c exec chromium; mode "default"
-	bindsym n exec chromium --incognito; mode "default"
+	bindsym c exec firefox; mode "default"
+	bindsym n exec firefox --private-window; mode "default"
 	bindsym v exec gvim; mode "default"
 	bindsym l exec lock-screen; mode "default"
 	bindsym s exec lock-screen --suspend; mode "default"
